# databao-context-engine

./: pyproject.toml
.github/actions/setup-project/: action.yml
.github/workflows/: pre-commit.yml  publish.yml  publish_stable_manually.yml  publish_tag_triggered.yml  pytest.yml
docs/: publishing.md
src/databao_context_engine/: __init__.py  databao_context_domain_manager.py  databao_context_engine.py
src/databao_context_engine/build_sources/: build_wiring.py
src/databao_context_engine/datasources/: datasource_context.py
src/databao_context_engine/introspection/: property_extract.py
src/databao_context_engine/llm/: api.py  config.py  factory.py
src/databao_context_engine/mcp/: mcp_server.py
src/databao_context_engine/pluginlib/: build_plugin.py  config.py
src/databao_context_engine/plugins/: duckdb_tools.py
src/databao_context_engine/project/: info.py  init_project.py  layout.py  project_config.py
src/databao_context_engine/search_context/: search_service.py  search_wiring.py
src/databao_context_engine/serialization/: yaml.py
src/databao_context_engine/services/: chunk_embedding_service.py  embedding_shard_resolver.py  factories.py  models.py  persistence_service.py
src/databao_context_engine/storage/: migrate.py  models.py
src/databao_context_engine/system/: properties.py
tests/: conftest.py  test_databao_context_domain_manager.py  test_databao_context_engine.py
tests/build_sources/: test_build_service.py
tests/integration/: test_e2e_build.py  test_embed_flow.py  test_index_existing_context.py  test_ollama_embedding_integration.py
tests/llm/embeddings/: test_provider.py
tests/mcp/: conftest.py  test_mcp_server.py
tests/plugins/: test_plugin_loader.py
tests/plugins/databases/: database_contracts.py  test_duckdb_db_plugin.py  test_sqlite_db_plugin.py
tests/project/: test_init_project.py  test_layout.py  test_project_config.py
tests/search_context/: test_search_context_service.py
tests/serialization/: test_yaml.py
tests/services/: test_chunk_embedding_service.py  test_embedding_shard_resolver.py  test_persistence_service.py
tests/storage/: test_migrate.py
tests/storage/repositories/: test_chunk_repository.py
tests/utils/: factories.py  project_creation.py
(+28 files in other folders)
