[project]
name = "databao-context-engine"
version = "0.6.0"
description = "Semantic context for your LLMs — generated automatically"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0 AND LicenseRef-Additional-Terms"
license-files = ["LICENSE.md"]
dependencies = [
    "click>=8.3.0",
    "duckdb>=1.4.3",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "mcp>=1.23.3",
    "pydantic>=2.12.4",
    "jinja2>=3.1.6",
    "sqlparse>=0.5.5",
    "pyarrow>=19.0.1"
]
default-optional-dependency-keys = [
    "mysql",
    "postgresql"
]

[project.urls]
Homepage = "https://databao.app/"
Source = "https://github.com/JetBrains/databao-context-engine"

[project.optional-dependencies]
mssql = [
    "mssql-python>=1.0.0"
]
clickhouse = [
    "clickhouse-connect>=0.10.0"
]
athena = [
    "pyathena>=3.25.0"
]
snowflake = [
    "snowflake-connector-python>=4.2.0",
]
bigquery = [
    "google-cloud-bigquery>=3.40.1",
]
mysql = [
    "pymysql>=1.1.2"
]
postgresql = [
    "asyncpg>=0.31.0",
]
pdf = [
    "docling>=2.70.0",
]

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-unordered>=0.7.0",
    "ruff>=0.14.4",
    "testcontainers==4.12.0",
    "types-pyyaml>=6.0.12.20250915",
    "types-pymysql>=1.1.0.20250916",
    "pytest-mock>=3.15.1",
    "asyncpg-stubs>=0.31.1",
]

[project.scripts]
dce = "databao_context_engine.main:main"
generate_configs_schemas = "databao_context_engine.generate_configs_schemas:main"

[tool.uv]
override-dependencies = ["urllib3>=2.6.3", "filelock>=3.20.3", "virtualenv>=20.36.1"]

[tool.uv.build-backend]
source-exclude = ["tests"]

[tool.mypy]
#strict = true
show_error_codes = true
check_untyped_defs = false
disallow_untyped_defs = false ## many errors now
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = false
allow_redefinition_new = true
local_partial_types = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = ["requests", "requests.*"]
ignore_missing_imports = true

[tool.pytest]
addopts = ["--import-mode=importlib"]
strict = true
